--- a/iOS Restore/en.lproj/MainWindow.xib
+++ b/iOS Restore/en.lproj/MainWindow.xib
@@ -272,13 +272,13 @@
 							<string key="NSFrame">{{13, 88}, {454, 82}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="1052021934"/>
+							<reference key="NSNextKeyView" ref="519198055"/>
 							<object class="NSMutableArray" key="NSTabViewItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="NSTabViewItem" id="748163921">
 									<string key="NSIdentifier">1</string>
 									<object class="NSView" key="NSView" id="519198055">
-										<nil key="NSNextResponder"/>
+										<reference key="NSNextResponder" ref="19135120"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -287,6 +287,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{14, 16}, {92, 17}}</string>
 												<reference key="NSSuperview" ref="519198055"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="519625412"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="944691686">
@@ -324,6 +325,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{111, 13}, {218, 22}}</string>
 												<reference key="NSSuperview" ref="519198055"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="436487598"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="147355303">
@@ -355,6 +357,8 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{331, 5}, {92, 32}}</string>
 												<reference key="NSSuperview" ref="519198055"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="410376691"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="299459715">
 													<int key="NSCellFlags">67239424</int>
@@ -372,6 +376,8 @@
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {434, 36}}</string>
+										<reference key="NSSuperview" ref="19135120"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="272472492"/>
 									</object>
 									<string key="NSLabel">Local IPSW</string>
@@ -381,7 +387,7 @@
 								<object class="NSTabViewItem" id="165551433">
 									<string key="NSIdentifier">2</string>
 									<object class="NSView" key="NSView" id="1052021934">
-										<reference key="NSNextResponder" ref="19135120"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -390,8 +396,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{215, 9}, {205, 26}}</string>
 												<reference key="NSSuperview" ref="1052021934"/>
-												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="410376691"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSPopUpButtonCell" key="NSCell" id="250538483">
 													<int key="NSCellFlags">-2076049856</int>
@@ -459,7 +463,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{14, 15}, {121, 17}}</string>
 												<reference key="NSSuperview" ref="1052021934"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="398701836"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="169572989">
@@ -474,8 +477,6 @@
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {434, 36}}</string>
-										<reference key="NSSuperview" ref="19135120"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1032975324"/>
 									</object>
 									<string key="NSLabel">Apple Restore Server</string>
@@ -483,14 +484,14 @@
 									<reference key="NSTabView" ref="19135120"/>
 								</object>
 							</object>
-							<reference key="NSSelectedTabViewItem" ref="165551433"/>
+							<reference key="NSSelectedTabViewItem" ref="748163921"/>
 							<reference key="NSFont" ref="202317494"/>
 							<int key="NSTvFlags">0</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<reference ref="1052021934"/>
+								<reference ref="519198055"/>
 							</object>
 						</object>
 						<object class="NSImageView" id="1028040553">
@@ -842,6 +843,14 @@
 					</object>
 					<int key="connectionID">586</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">browseForIPSW:</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="436487598"/>
+					</object>
+					<int key="connectionID">601</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1044,12 +1053,12 @@
 						<reference key="object" ref="439893737"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="19135120"/>
 							<reference ref="410376691"/>
 							<reference ref="835177178"/>
 							<reference ref="56645223"/>
 							<reference ref="1028040553"/>
 							<reference ref="2517436"/>
+							<reference ref="19135120"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -1552,7 +1561,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">600</int>
+			<int key="maxID">601</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1560,6 +1569,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">iOS_RestoreAppDelegate</string>
 					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">browseForIPSW:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">browseForIPSW:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">browseForIPSW:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
