--- a/iOS Restore/en.lproj/MainWindow.xib
+++ b/iOS Restore/en.lproj/MainWindow.xib
@@ -272,13 +272,13 @@
 							<string key="NSFrame">{{13, 88}, {454, 82}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="519198055"/>
+							<reference key="NSNextKeyView" ref="1052021934"/>
 							<object class="NSMutableArray" key="NSTabViewItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="NSTabViewItem" id="748163921">
 									<string key="NSIdentifier">1</string>
 									<object class="NSView" key="NSView" id="519198055">
-										<reference key="NSNextResponder" ref="19135120"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -287,7 +287,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{14, 16}, {92, 17}}</string>
 												<reference key="NSSuperview" ref="519198055"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="519625412"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="944691686">
@@ -325,7 +324,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{111, 13}, {218, 22}}</string>
 												<reference key="NSSuperview" ref="519198055"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="436487598"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="147355303">
@@ -357,7 +355,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{331, 5}, {92, 32}}</string>
 												<reference key="NSSuperview" ref="519198055"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="410376691"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="299459715">
@@ -376,8 +373,6 @@
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {434, 36}}</string>
-										<reference key="NSSuperview" ref="19135120"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="272472492"/>
 									</object>
 									<string key="NSLabel">Local IPSW</string>
@@ -387,7 +382,7 @@
 								<object class="NSTabViewItem" id="165551433">
 									<string key="NSIdentifier">2</string>
 									<object class="NSView" key="NSView" id="1052021934">
-										<nil key="NSNextResponder"/>
+										<reference key="NSNextResponder" ref="19135120"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -396,6 +391,8 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{215, 9}, {205, 26}}</string>
 												<reference key="NSSuperview" ref="1052021934"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="19135120"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSPopUpButtonCell" key="NSCell" id="250538483">
 													<int key="NSCellFlags">-2076049856</int>
@@ -463,6 +460,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{14, 15}, {121, 17}}</string>
 												<reference key="NSSuperview" ref="1052021934"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="398701836"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="169572989">
@@ -477,6 +475,8 @@
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {434, 36}}</string>
+										<reference key="NSSuperview" ref="19135120"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1032975324"/>
 									</object>
 									<string key="NSLabel">Apple Restore Server</string>
@@ -484,14 +484,14 @@
 									<reference key="NSTabView" ref="19135120"/>
 								</object>
 							</object>
-							<reference key="NSSelectedTabViewItem" ref="748163921"/>
+							<reference key="NSSelectedTabViewItem" ref="165551433"/>
 							<reference key="NSFont" ref="202317494"/>
 							<int key="NSTvFlags">0</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<reference ref="519198055"/>
+								<reference ref="1052021934"/>
 							</object>
 						</object>
 						<object class="NSImageView" id="1028040553">
@@ -530,7 +530,6 @@
 							<string key="NSFrame">{{24, 5}, {210, 14}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="155351326">
 								<int key="NSCellFlags">68288064</int>
@@ -674,7 +673,6 @@
 							<string key="NSFrame">{{18, 16}, {206, 20}}</string>
 							<reference key="NSSuperview" ref="736869948"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<int key="NSpiFlags">16394</int>
 							<double key="NSMaxValue">100</double>
 						</object>
@@ -850,6 +848,22 @@
 						<reference key="destination" ref="436487598"/>
 					</object>
 					<int key="connectionID">601</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">almightyRestoreButton</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="56645223"/>
+					</object>
+					<int key="connectionID">603</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">serverFirmwareSelectionChange:</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="250538483"/>
+					</object>
+					<int key="connectionID">604</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1561,7 +1575,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">601</int>
+			<int key="maxID">604</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1570,20 +1584,49 @@
 					<string key="className">iOS_RestoreAppDelegate</string>
 					<string key="superclassName">NSObject</string>
 					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">browseForIPSW:</string>
-						<string key="NS.object.0">id</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>attemptRestore:</string>
+							<string>browseForIPSW:</string>
+							<string>serverFirmwareSelectionChange:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
 					</object>
 					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">browseForIPSW:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">browseForIPSW:</string>
-							<string key="candidateClassName">id</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>attemptRestore:</string>
+							<string>browseForIPSW:</string>
+							<string>serverFirmwareSelectionChange:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">attemptRestore:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">browseForIPSW:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">serverFirmwareSelectionChange:</string>
+								<string key="candidateClassName">id</string>
+							</object>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>almightyRestoreButton</string>
 							<string>connectedDeviceLabel</string>
 							<string>restoreTypeTabView</string>
 							<string>serverDownloadBar</string>
@@ -1594,6 +1637,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSButton</string>
 							<string>NSTextField</string>
 							<string>NSTabView</string>
 							<string>NSProgressIndicator</string>
@@ -1607,6 +1651,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>almightyRestoreButton</string>
 							<string>connectedDeviceLabel</string>
 							<string>restoreTypeTabView</string>
 							<string>serverDownloadBar</string>
@@ -1617,6 +1662,10 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">almightyRestoreButton</string>
+								<string key="candidateClassName">NSButton</string>
+							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">connectedDeviceLabel</string>
 								<string key="candidateClassName">NSTextField</string>
